[package]
authors = ['Octopus Network <hi@oct.network>']
description = 'FRAME pallet for joining the octopus network as an appchain.'
edition = '2018'
homepage = 'https://oct.network'
license = 'Unlicense'
name = 'pallet-octopus-appchain'
repository = 'https://github.com/octopus-network/pallet-octopus-appchain.git'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-session = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
base64 = { default-features = false, version = '0.13', features = ['alloc'] }
hex = { default-features = false, version = '0.4', features = ['alloc'] }
lite-json = { default-features = false, version = '0.1' }
serde = { optional = true, version = '1.0.119' }

[dev-dependencies]
sp-keystore = { default-features = false, version = '0.9.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-session/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'base64/std',
    'hex/std',
    'lite-json/std',
    'serde',
]
